--- a/src/main/resources/templates/formulario-usuario.html
+++ b/src/main/resources/templates/formulario-usuario.html
@@ -1,10 +1,79 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+<html xmlns:th="http://www.thymeleaf.org"
+      lang="en">
+<head th:replace="base :: common_header (~{::title})">
+    <title>Formulario Usuario</title>
 </head>
+
 <body>
-$END$
+<div id="wrapper">
+    <nav th:replace="base :: common_navigation_menu"></nav>
+
+</div>
+<div>
+    <h1><span th:text="${propositoFormulario}"></span></h1>
+</div>
+<div>
+    <form role="form">
+        <div>info del usuario</div>
+        <div>
+            <fieldset>
+                <div class="form-group">
+                    <label for="FormUsuarioId">id Usuario</label>
+                    <input type="text" name="FormUsuarioId" id="FormUsuarioId"
+                           th:value="${usuario.idUsuario}">
+                </div>
+                <div class="form-group">
+                    <label for="FormUsuarioNombre">Nombre</label>
+                    <input type="text" name="FormUsuarioNombre" id="FormUsuarioNombre"
+                           th:value="${usuario.nombre}">
+                </div>
+                <div class="form-group">
+                    <label for="FormUsuarioEdad">Edad</label>
+                    <input type="number" name="FormUsuarioEdad" id="FormUsuarioEdad"
+                           th:value="${usuario.edad}">
+                </div>
+
+                <div th:each="telefono : ${telefonos}">
+                    <div class="form-group">
+                        <label for="FormTelefonoNumero">Numero</label>
+                        <input type="text" name="FormTelefonoNumero" id="FormTelefonoNumero"
+                               th:value="${telefono.numero}">
+                    </div>
+
+                    <div class="form-group">
+                        <label for="FormTelefonoLada">Lada</label>
+                        <input type="number" name="FormTelefonoLada" id="FormTelefonoLada"
+                               th:value="${telefono.lada}">
+                    </div>
+
+                    <div class="form-group">
+                        <label for="FormTelefonoTipo">Tipo Telefono</label>
+                        <input type="text" name="FormTelefonoTipo" id="FormTelefonoTipo"
+                               th:value="${telefono.tipo}">
+                    </div>
+
+                </div>
+
+
+
+            </fieldset>
+
+            <div id = "successModal">
+                <span id="successMessage"></span>
+            </div>
+
+            <div id = "errorModal">
+                <span id="errorMessage"></span>
+            </div>
+
+
+            <div>
+                <button type="submit" id="guardarFormulario">Guardar</button>
+            </div>
+        </div>
+    </form>
+</div>
 </body>
+<footer th:replace="~{base :: common_footer}"></footer>
 </html>
