--- a/src/main/resources/templates/pagina-login.html
+++ b/src/main/resources/templates/pagina-login.html
@@ -1,10 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Login</title>
 </head>
 <body>
-$END$
+<div>
+    <form role="form" method="post" action="/login">
+        <fieldset>
+            <div>
+                <input placeholder="Usuario" name="username" type=text>
+            </div>
+            <div>
+                <input placeholder="Contraseña" name="password" type=text>
+            </div>
+
+            <div th:if="${error}">
+                <p th:text="${error}" style="color: red;"></p>
+            </div>
+
+            <div>
+                <button type="submit">Login</button>
+            </div>
+
+        </fieldset>
+    </form>
+
+
+</div>
+
 </body>
 </html>
